--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     </div>
 
-<script src="C:\Users\Sanchit2\Desktop\WebDev\Dice Game\index.js" charset="utf-8"></script>
+<script src="index.js" charset="utf-8"></script>
 
   </body>
 
